        2.6.16.27-0.9 (SLES 10)
       * Client support for unpatched kernels:
        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.9-42.0.10.EL (RHEL 4)
        2.6.16 - 2.6.22 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.39.cfs7
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * bug fixes

Severity   : normal
Frequency  : rare
Bugzilla   : 12629
Description: Deadlock during metadata tests
Details    : in prune_dir_dentries(), shrink_dcache_parent() should not be
             called with the per-dentry lock held.

Severity   : normal
Frequency  : SLES9 only
Bugzilla   : 12744
Description: Lustre patched kernel for SLES9 SP3 has NR_CPUS set to 8
Details    : set CONFIG_NR_CPUS to 128 instead of 8.

Severity   : enhancement
Bugzilla   : 12678
Description: remove fs_prep_san_write operation and related patches
Details    : remove the ext3-san-jdike patches which are no longer useful.

Severity   : normal
Frequency  : rare
Bugzilla   : 11324
Description: LDISKFS-fs error (device sdc): ldiskfs_free_blocks
Details    : a disk corruption can cause the mballoc code to assert on a
	     double free.

Severity   : enhancement
Bugzilla   : 12194
Description: add optional extra BUILD_VERSION info
Details    : add a new environment variable (namely LUSTRE_VERS) which allows
	     to override the lustre version.

Severity   : normal
Frequency  : 2.6.18 servers only
Bugzilla   : 12546
Description: ll_kern_mount() doesn't release the module reference
Details    : The ldiskfs module reference count never drops down to 0
	     because ll_kern_mount() doesn't release the module reference.

Severity   : normal
Frequency  : rare
Bugzilla   : 12470
Description: server LBUG when using old ost_num_threads parameter
Details    : Accept the old ost_num_threads parameter but warn that it
	     is deprecated, and fix an off-by-one error that caused an LBUG.

Severity   : normal
Frequency  : rare